--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Min Blazor App til uge 4</a>
+    <a class="navbar-brand" href="">Min Blazor App</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
